[package]
name = "quinn-cid-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
quinn = "0.11.1"
quinn-proto = "0.11.1"
rcgen = "0.13.1"
rustls = { version = "0.23.8", default-features = false, features = ["ring"] }
tokio = { version = "1.37.0" }
